swtpm_cert: Support for Elliptic Curve keys
Provide support for creating certificates for TPM2 ECC type of keys.

Extend the test cases and the man pages.

Signed-off-by: Stefan Berger <stefanb@linux.vnet.ibm.com>

--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -49,6 +49,7 @@ TESTS += \
 	test_swtpm_setup_create_cert \
 	\
 	test_tpm2_swtpm_cert \
+	test_tpm2_swtpm_cert_ecc \
 	test_tpm2_swtpm_setup_create_cert
 endif
 	
