Support TPM 2 in swtpm_setup and swtpm_setup.sh
Support TPM 2 in swtpm_setup and swtpm_setup.sh.
Implement support for all command line options except for:
 o --take-ownership and anything related to ownership passwords
 o --lock-nvram
 o --display

Signed-off-by: Stefan Berger <stefanb@linux.vnet.ibm.com>

--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -39,7 +39,8 @@ TESTS = \
 	test_tpm2_wrongorder \
 	test_tpm2_probe \
 	\
-	test_tpm2_swtpm_bios
+	test_tpm2_swtpm_bios \
+	test_tpm2_parameters
 
 
 if WITH_GNUTLS
@@ -47,7 +48,8 @@ TESTS += \
 	test_swtpm_cert \
 	test_swtpm_setup_create_cert \
 	\
-	test_tpm2_swtpm_cert
+	test_tpm2_swtpm_cert \
+	test_tpm2_swtpm_setup_create_cert
 endif
 	
 EXTRA_DIST=$(TESTS) \
