--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -45,7 +45,9 @@ TESTS = \
 if WITH_GNUTLS
 TESTS += \
 	test_swtpm_cert \
-	test_swtpm_setup_create_cert
+	test_swtpm_setup_create_cert \
+	\
+	test_tpm2_swtpm_cert
 endif
 	
 EXTRA_DIST=$(TESTS) \
